ERE-784: ClassCastException